[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-network"
version = "0.1.0"
description = "Home WiFi network security scanner — detect ARP spoofing, DNS hijacking, rogue APs, and more"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Secure Network Team"}]
dependencies = [
    "scapy>=2.5.0",
    "pywifi>=1.1.12",
    "dnspython>=2.4.0",
    "netifaces>=0.11.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "httpx>=0.24.0",
]

[project.scripts]
secure-network = "secure_network.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["secure_network*"]
